--- a/chem_bio.html
+++ b/chem_bio.html
@@ -17,10 +17,10 @@
                 <img src="https://sun9-49.userapi.com/impf/QembUeIxPmd5MlqvKsqCyxhtFGuofbhA68owMw/AegFZ-a7NKY.jpg?size=604x405&quality=96&sign=42c72442c5aa0663aad340c47742cf4e&type=album" alt="Логотип гимназии" width="150">
                 <h1>МАОУ гимназия №25. Профориентация</h1>
             </div>
-             <ul class="nav-links">
-                 <li><a href="index.html">Главная</a></li>
-                 <li><a href="#contacts">Контакты</a></li>
-             </ul>
+            <ul class="nav-links">
+                <li><a href="/">Главная</a></li>
+                <li><a href="#contacts">Контакты</a></li>
+            </ul>
         </div>
     </nav>
 </header>
@@ -30,19 +30,19 @@
         <p class="direction-description">
             Химико-биологический профиль подходит тем, кто хочет работать в медицине, экологии и других сферах, связанных с химией и биологией.
         </p>
-       <h3>Углубленные предметы</h3>
+        <h3>Углубленные предметы</h3>
         <ul class="subjects">
-           <li>Химия</li>
-           <li>Биология</li>
-           <li>Экология</li>
+            <li>Химия</li>
+            <li>Биология</li>
+            <li>Экология</li>
         </ul>
         <h3>Возможные профессии</h3>
         <ul class="professions">
             <li>Врач</li>
-             <li>Фармацевт</li>
+            <li>Фармацевт</li>
             <li>Биолог</li>
-             <li>Химик</li>
-             <li>Ветеринар</li>
+            <li>Химик</li>
+            <li>Ветеринар</li>
         </ul>
         <button class="btn" id="openScheduleModalChemBio">Посмотреть возможное расписание уроков</button>
         <p class="contact-phone"><b>По вопросам об учебе на направлении:</b></p>
@@ -51,36 +51,35 @@
     </div>
 </section>
 
-     <!-- Модальное окно для расписания -->
-    <div id="scheduleModalChemBio" class="modal">
-        <div class="modal-content">
-             <span class="close">&times;</span>
-             <h2>Пример расписания уроков у 10 класса (группа 2)</h2>
-            <img src="https://i.postimg.cc/bvV5ngnB/image.jpg" alt="Пример расписания" width="600">
-        </div>
+<!-- Модальное окно для расписания -->
+<div id="scheduleModalChemBio" class="modal">
+    <div class="modal-content">
+        <span class="close">&times;</span>
+        <h2>Пример расписания уроков у 10 класса (группа 2)</h2>
+        <img src="https://i.postimg.cc/bvV5ngnB/image.jpg" alt="Пример расписания" width="600">
     </div>
+</div>
 
+<section id="contacts" class="section">
+    <div class="container">
+        <h2>Контакты</h2>
+        <p class="contacts-text">Если у вас остались вопросы, свяжитесь с нами:</p>
+        <address>
+            <p><b>Адрес гимназии:</b> г. Краснодар, ул. Рашпилевская, д. 134</p>
+            <p><b>Телефон:</b> <a href="tel:+78612550261">+7 (861) 255-02-61</a></p>
+            <p><b>Email:</b> <a href="mailto:school25@kubannet.ru">school25@kubannet.ru</a></p>
+            <ul class="link-list">
+                <li> <b>Сайт гимназии:</b> <a href="https://school25.centerstart.ru" target="">https://school25.centerstart.ru</a></li>
+            </ul>
+        </address>
+    </div>
+</section>
+<footer>
+    <div class="container">
+        <p>&copy; 2025 МАОУ Гимназия №25. Все права защищены.</p>
+    </div>
+</footer>
 
-    <section id="contacts" class="section">
-        <div class="container">
-             <h2>Контакты</h2>
-             <p class="contacts-text">Если у вас остались вопросы, свяжитесь с нами:</p>
-             <address>
-                <p><b>Адрес гимназии:</b> г. Краснодар, ул. Рашпилевская, д. 134</p>
-                <p><b>Телефон:</b> <a href="tel:+78612550261">+7 (861) 255-02-61</a></p>
-                <p><b>Email:</b> <a href="mailto:school25@kubannet.ru">school25@kubannet.ru</a></p>
-                <ul class="link-list">
-                    <li> <b>Сайт гимназии:</b> <a href="https://school25.centerstart.ru" target="">https://school25.centerstart.ru</a></li>
-                </ul>
-            </address>
-         </div>
-    </section>
-    <footer>
-        <div class="container">
-            <p>&copy; 2025 МАОУ Гимназия №25. Все права защищены.</p>
-        </div>
-    </footer>
-
-    <script src="static/js/core.js"></script>
+<script src="static/js/core.js"></script>
 </body>
 </html>
