--- a/chem_bio.html
+++ b/chem_bio.html
@@ -42,7 +42,7 @@
             <li>Фармацевт</li>
             <li>Биолог</li>
             <li>Химик</li>
-            <li>Ветеринар</li>
+            <li>Ветеринар и др.</li>
         </ul>
         <button class="btn" id="openScheduleModalChemBio">Посмотреть возможное расписание уроков</button>
         <p class="contact-phone"><b>По вопросам об учебе на направлении:</b></p>
